# Tuengel

./: .gitignore  .gitmodules
hw_libs/: Case_symbols.kicad_sym
hw_libs/MT2492/: MT2492.kicad_sym
hw_libs/W25Q16JVUXIQ/: W25Q16JVUXIQ.kicad_sym
hw_libs/W25Q16JVUXIQ/W25Q16JVUXIQ.pretty/: SON50P300X200X60-9N.kicad_mod
hw_main/: Case_Main.kicad_pcb  Case_Main.kicad_prl  Case_Main.kicad_pro  Case_Main.kicad_sch  fp-lib-table
hw_main/Case_footprints.pretty/: TestPoints_1x04_P2.0.kicad_mod
misc/: protocol.txt
misc/crc32/: crc32.c  crc32.h  crc32_check.py  crc32_table.lua
misc/ser-tcp-relay/: main.c  ser-tcp-relay-loop.bat
misc/testrun1_fw/: platformio.ini
misc/testrun1_fw/boards/: genericSTM32G030C8.json
misc/testrun1_fw/debug/: run.sh
misc/testrun1_fw/src/: main.c
releases/: Case_Subt_R2_fw_L0.elf  Case_Subt_R2_fw_L1.elf
subt_fw/: .gitmodules  CMakeLists.txt  build.sh  debug.sh
subt_fw/misc/: serial.c  serial_comm.py
subt_fw/src/: debug_print.h  main.c  uart.pio
subt_hw/: Case_Subt.kicad_pcb  Case_Subt.kicad_prl  Case_Subt.kicad_pro  Case_Subt.kicad_sch  Out_Conn.kicad_sch  Port.kicad_sch  fp-lib-table  sym-lib-table
unit_fw/: Makefile  PY32F002B_Firmware_V1.1.2
unit_fw/src/: main.c  py32f002b_hal_conf.h
unit_hw/: Case_Unit.kicad_pcb  Case_Unit.kicad_prl  Case_Unit.kicad_pro  Case_Unit.kicad_sch  fp-lib-table  sym-lib-table
